--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybatis.configrtaion.map-underscore-to-camel-case=true
+mybatis.configuration.map-underscore-to-camel-case=true
 
