--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
+spring.thymeleaf.prefix=classpath:/templates/
