--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
 //	Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+//	Spring Data JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	
 //	便利機能追加
 	implementation 'org.apache.commons:commons-lang3:3.15.0'
